--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,17 @@
+/* Global */
 @import "./global/global.css";
+@import "./global/header.css";
+
+/* Utilidades */
 @import "./utilidades/tipografia.css";
 @import "./utilidades/cores.css";
-@import "./global/header.css";
-@import "./home/introducao.css";
 @import "./utilidades/componentes.css";
-@import "./bicicletas/bicicletas-lista.css";
+
+/* Home */
+@import "./home/introducao.css";
 @import "./home/tecnologia.css";
-@import "./home/parceiros.css"
+@import "./home/parceiros.css";
+@import "./home/depoimento.css";
+
+/* Bicicletas */
+@import "./bicicletas/bicicletas-lista.css";
