--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,12 @@
-/* Global */
 @import "./global/global.css";
+@import "./utilidades/componentes.css";
+@import "./utilidades/cores.css";
+
 @import "./global/header.css";
+@import "./global/footer.css";
 
 /* Utilidades */
 @import "./utilidades/tipografia.css";
-@import "./utilidades/cores.css";
-@import "./utilidades/componentes.css";
 
 /* Home */
 @import "./home/introducao.css";
