--- a/assets/css/global/footer.css
+++ b/assets/css/global/footer.css
@@ -21,7 +21,7 @@
 .footer-contato li:nth-child(even):after {
   content: "";
   display: block;
-  width: 360px;
+  max-width: 360px;
   height: 2px;
   background: var(--cor-11);
   margin-top: 16px;
